* New: Fire actions on enrolment status change and manual enrolment status change [#3035](https://github.com/Automattic/sensei/pull/3035)
* New: Add a filter for the batch size of the learner calculation job [#3054](https://github.com/Automattic/sensei/pull/3054)
* New: Introduce a provider journal store [#3027](https://github.com/Automattic/sensei/pull/3027)
* Tweak: Append post status to prerequisite lesson on Lessons page [#2853](https://github.com/Automattic/sensei/pull/2853) 👏 @JuanchoPestana
* Tweak: Change user_started_course in quiz and email code [#2968](https://github.com/Automattic/sensei/pull/2968)
* Tweak: Add support for enrolments in bulk learner management [#2965](https://github.com/Automattic/sensei/pull/2965)
* Tweak: Move enrolment files to own directory [#2881](https://github.com/Automattic/sensei/pull/2881)
* Tweak: Replace usages of Sensei_Utils::user_started_course in course methods [#2962](https://github.com/Automattic/sensei/pull/2962)
* Tweak: Replace usages of Sensei_Utils::user_started_course in templates [#2951](https://github.com/Automattic/sensei/pull/2951)
* Tweak: Rename "Remove progress" bulk learner action [#2985](https://github.com/Automattic/sensei/pull/2985)
* Tweak: Update usage tracking for enrolment count [#2958](https://github.com/Automattic/sensei/pull/2958)
* Tweak: Hide "Manually Enrolled Learners" filter when not needed [#3014](https://github.com/Automattic/sensei/pull/3014)
* Tweak: Remove logging functionality from provider state [#3021](https://github.com/Automattic/sensei/pull/3021)
* Tweak: Refactor removal of Sensei comments from total counts [#3009](https://github.com/Automattic/sensei/pull/3009)
* Tweak: Switch to using a handler when a learner starts taking a course [#3000](https://github.com/Automattic/sensei/pull/3000)
* Tweak: Allow for not storing enrolment results when they don't provide enrolment [#3028](https://github.com/Automattic/sensei/pull/3028)